kubelet/samples/nginx-flex-blobfuse-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-flex-blobfuse
spec:
  containers:
  - name: nginx-flex-blobfuse
    image: nginx
    volumeMounts:
    - name: flexvol-mount
      mountPath: /data
  nodeSelector:
    nodeid: "1"
  volumes:
  - name: flexvol-mount
    persistentVolumeClaim:
      claimName: pvc-blobfuse-flexvol
      readOnly: false
