kubelet/samples/agic.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-deployment
spec:
  selector:
    matchLabels:
      app: ws-app
  replicas: 1
  template:
    metadata:
      labels:
        app: ws-app
    spec:
      containers:
        - name: websocket-app
          imagePullPolicy: Always
          image: mcr.microsoft.com/dotnet/core/samples:aspnetapp
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: websocket-service
spec:
  selector:
    app: ws-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: websocket-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: azing-38401.eastus.cloudapp.azure.com
      http:
        paths:
          - backend:
              serviceName: websocket-service
              servicePort: 80
